# fwprotocol-defs

./: MANIFEST.in  flow.yaml  ivpm.yaml  pyproject.toml  setup.py
src/org/featherweight_ip/protocol/core/: wishbone.py
verilog/rtl/: rv_macros.svh  wishbone_macros.svh
